Tue Aug  7 16:12:40 2001  Jonathan Blandford  <jrb@redhat.com>

	* Makefile.am (EXTRA_DIST): Add nautilus-help.desktop to
	EXTRA_DIST.

Mon Aug  6 15:04:14 2001  Jonathan Blandford  <jrb@redhat.com>

	* libnautilus-private/nautilus-link-impl-desktop.c
	(nautilus_link_impl_desktop_local_create): write nautilus files
	using gnome-vfs instead of FILE.

	* libnautilus-private/nautilus-icon-container.c: Change signature
	of the "handle_uri_list" callback to include the drag action.

	* src/file-manager/fm-icon-view.c (icon_view_handle_uri_list):
	Handle uri's more gracefully.

	* src/file-manager/fm-directory-icon-view
	(icon_view_handle_uri_list): Comment out.  Now handled in the
	parent class.

2001-08-03  Havoc Pennington  <hp@redhat.com>

	* src/nautilus-desktop-window.c (set_gdk_window_background): only
	set root background to a pixel if we retrieved a pixel property

2001-08-03  Havoc Pennington  <hp@redhat.com>

	* Makefile.am, nautilus-help.desktop: Add a help icon that uses
	Nautilus

	* components/help/help-method.c (help_name_to_local_path): 
	handle ghelp:toc to go to the default page gnome-help-browser used
	to go to. kind of a lame hack, but so is this whole vfs module ;-)

2001-08-01  Havoc Pennington  <hp@redhat.com>

	* src/nautilus-desktop-window.c (map): Set background of our child
	widgets in addition to our own background. This gets rid of the
	last of the ugliness during Nautilus startup, I believe.

2001-08-01  Havoc Pennington  <hp@redhat.com>

	
	* libnautilus-private/nautilus-link-impl-desktop.c: use 
	desktop_file_get_locale_string() instead of
	desktop_file_get_string() to get the names from the desktop files.

2001-08-01  Havoc Pennington  <hp@redhat.com>

	* eazel-logos/default.xml: hang on - is this the default theme for
	nautilus, or is the below file the default theme for nautilus? 
	anyway, make same change to remove title colors.

	* icons/default.xml: don't hardcode the title, title info, and