@@ -1,3 +1,9 @@
+Wed Aug  8 21:02:33 2001  Jonathan Blandford  <jrb@redhat.com>
+
+	* libnautilus-private/nautilus-link-impl-desktop.c
+	(nautilus_link_impl_desktop_local_create): fix to really work with
+	gnome_vfs.
+
 Tue Aug  7 16:12:40 2001  Jonathan Blandford  <jrb@redhat.com>
 
 	* Makefile.am (EXTRA_DIST): Add nautilus-help.desktop to
